# Marco

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindBCM2835.cmake  FindConfig.cmake
config/: log.conf  marco.config  test.config
docs/: Architecture.dia
src/: ActionCommand.cpp  ActionCommand.h  Command.h  Config.cpp  Config.h  ControlEntity.cpp  ControlEntity.h  InputHandler.cpp  InputHandler.h  MoveCommand.cpp  MoveCommand.h  Robot.cpp  Robot.h  SpeedCommand.cpp  SpeedCommand.h  StopCommand.cpp  StopCommand.h  StreamListener.cpp  StreamListener.h  Timer.cpp  Timer.h  Track.cpp  Track.h  WSServer.cpp  WSServer.h  main.cpp
tests/: test_config.cpp  test_cvector.cpp  test_io.cpp  test_timer.cpp  test_ws.cpp
