CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(Marco)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -pthread -Wall")
SET(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")

SET(ROOT ${CMAKE_CURRENT_SOURCE_DIR})
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/../bin)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/../lib)

INCLUDE_DIRECTORIES(${ROOT}/src)


# The version number
SET(Marco_VERSION_MAJOR 0)
SET(Marco_VERSION_MINOR 1)


# External libraries
FIND_PACKAGE(Config++ REQUIRED)
INCLUDE_DIRECTORIES(${CONFIG++_INCLUDE_DIR})


# Tests
SET(TESTCONFIG_SRC
	tests/test_config.cpp)
ADD_EXECUTABLE(test_config ${TESTCONFIG_SRC})
TARGET_LINK_LIBRARIES(test_config ${CONFIG++_LIBRARY})

SET(TESTCVECTOR_SRC
	tests/test_cvector.cpp)
ADD_EXECUTABLE(test_cvector ${TESTCVECTOR_SRC})

SET(TESTIO_SRC
	tests/test_io.cpp)
ADD_EXECUTABLE(test_io ${TESTIO_SRC})


# Libraries
SET(LIBMARCO_SRC
	src/Config.cpp
	src/Robot.cpp
	src/Track.cpp
	src/ControlEntity.cpp
	src/InputHandler.cpp)
ADD_LIBRARY(libmarco STATIC ${LIBMARCO_SRC})
TARGET_LINK_LIBRARIES(libmarco ${CONFIG++_LIBRARIES})


# Executables
SET(MARCO_SRC
	src/main.cpp)
ADD_EXECUTABLE(marco ${MARCO_SRC})
TARGET_LINK_LIBRARIES(marco libmarco)
