CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
PROJECT(Marco)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -pthread -Wall")
SET(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")

SET(ROOT ${CMAKE_CURRENT_SOURCE_DIR})
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/../bin)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/../lib)

SET_DIRECTORY_PROPERTIES(PROPERTIES ADDITIONAL_MAKE_CLEAN_FILES ${CMAKE_BINARY_DIR}/../bin/logs)

INCLUDE_DIRECTORIES(${ROOT}/include)


# The version number
SET(Marco_VERSION_MAJOR 0)
SET(Marco_VERSION_MINOR 1)


# External libraries
FIND_PACKAGE(Config++ REQUIRED)
FIND_PACKAGE(Boost COMPONENTS system REQUIRED)

INCLUDE_DIRECTORIES(${CONFIG++_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIR})


# Tests
SET(TESTCONFIG_SRC
	tests/test_config.cpp)
ADD_EXECUTABLE(test_config ${TESTCONFIG_SRC})
TARGET_LINK_LIBRARIES(test_config ${CONFIG++_LIBRARY})

SET(TESTCVECTOR_SRC
	tests/test_cvector.cpp)
ADD_EXECUTABLE(test_cvector ${TESTCVECTOR_SRC})

SET(TESTIO_SRC
	tests/test_io.cpp)
ADD_EXECUTABLE(test_io ${TESTIO_SRC})

SET(TESTTIMER_SRC
	tests/test_timer.cpp)
ADD_EXECUTABLE(test_timer ${TESTTIMER_SRC})
TARGET_LINK_LIBRARIES(test_timer ${Boost_LIBRARIES})

SET(TESTTIMER_SRC
	tests/test_ws.cpp)
ADD_EXECUTABLE(test_ws ${TESTTIMER_SRC})
TARGET_LINK_LIBRARIES(test_ws ${Boost_LIBRARIES})


# Libraries
SET(LIBMARCO_SRC
	src/Robot.cpp
	src/Track.cpp
	src/ActionCommand.cpp
	src/MoveCommand.cpp
	src/StopCommand.cpp
	src/SpeedCommand.cpp
	src/InputHandler.cpp
	src/StreamListener.cpp
	src/WSServer.cpp
	src/Timer.cpp)
ADD_LIBRARY(marco_l STATIC ${LIBMARCO_SRC})


# Executables
SET(MARCO_SRC
	src/main.cpp)
ADD_EXECUTABLE(marco ${MARCO_SRC})
TARGET_LINK_LIBRARIES(marco marco_l)
TARGET_LINK_LIBRARIES(marco ${CONFIG++_LIBRARY})
TARGET_LINK_LIBRARIES(marco ${Boost_LIBRARIES})
